# -*- mode: meson -*-

option('tests', type : 'boolean', value: 'false',
       description : 'enable tests')

option('runtime-path', type : 'string', value : '/run',
       description : 'the runtime directory')

option('with-init-script', type : 'string', value : 'systemd',
       description : 'the runtime directory')

option('init-script', type : 'combo',
       choices : ['systemd', 'sysvinit', 'openrc', 'upstart'], value : 'systemd',
       description : 'init script')

option('docs', type : 'boolean', value: 'true',
       description : 'build documentation')

option('fuse-version', type : 'combo',
       choices : ['auto', '2', '3'], value : 'auto',
       description : 'fuse version to use')
